sumo/tests/sumo/output/meanhbefa_lanebased/errors/broken_number/errors.sumo
Error: Attribute 'begin' in definition of meandata-lane 'dump_15' is not a real number.
Quitting (on error).
